# caric_cdc_2023

./: CMakeLists.txt  README.md  package.xml
launch/: record_tajectories.launch  run_explorer.launch  run_gcs.launch  run_photographer.launch  run_photographer_path.launch  run_solution.launch  test_flight.launch  test_hangar.launch  test_mbs.launch
msg/: area.msg  norms.msg
scripts/: common.py  dijkstra.py  explorer.py  explorer_path.py  gcs.py  helper.py  jurong.csv  keep_score.py  mpc_implementation.py  odom2tf.py  photographer.py  photographer_path.py  plotXYZ.py  requirements.txt  rrt.py  test_flight.py  testing.py  trigger.py  uav_fov.py
src/: octomapTranslate.cpp
srv/: OctomapToCoords.srv
